--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -15,6 +15,7 @@
   <%= @story.default_char_name %>
 </p>
 
+<h2>Scenes</h2>
 <table>
   <thead>
     <tr>
@@ -31,9 +32,36 @@
         <td><%= scene.title %></td>
         <td><%= scene.description %></td>
         <td><%= scene.story_id %></td>
-        <td><%= link_to 'Show', scene %></td>
-        <td><%= link_to 'Edit', edit_scene_path(scene) %></td>
-        <td><%= link_to 'Destroy', scene, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', story_scene_path(@story, scene) %></td>
+        <td><%= link_to 'Edit', edit_story_scene_path(@story, scene) %></td>
+        <td><%= link_to 'Destroy', story_scene_path(@story, scene), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h2>Assets</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Asset type</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Durability</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @story.assets.each do |asset| %>
+      <tr>
+        <td><%= asset.asset_type %></td>
+        <td><%= asset.name %></td>
+        <td><%= asset.description %></td>
+        <td><%= asset.durability %></td>
+        <td><%= link_to 'Show', story_asset_path(@story, asset) %></td>
+        <td><%= link_to 'Edit', edit_story_asset_path(@story, asset) %></td>
+        <td><%= link_to 'Destroy', story_asset_path(@story, asset), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
