--- a/app/views/scenes/index.html.erb
+++ b/app/views/scenes/index.html.erb
@@ -14,7 +14,7 @@
     <% @scenes.each do |scene| %>
       <tr>
         <td><%= scene.title %></td>
-        <td><%= scene.description %></td>
+        <td><%= truncate(scene.description, :length => 100) %></td>
         <td><%= scene.story_id %></td>
         <td><%= link_to 'Show', story_scene_path(@story, scene) %></td>
         <td><%= link_to 'Edit', edit_story_scene_path(@story, scene) %></td>
