--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -1,33 +1,19 @@
-<%= form_for([@story, @asset]) do |f| %>
-  <% if @asset.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@asset.errors.count, "error") %> prohibited this asset from being saved:</h2>
-
-      <ul>
-      <% @asset.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= simple_form_for([@story, @asset]) do |f| %>
+  
 
   <div class="field">
-    <%= f.label :asset_type %><br>
-    <%= f.number_field :asset_type %>
+    <%= f.input :asset_type, collection: Asset.asset_types, :label_method => :last, :value_method => :first, :include_blank => false, :input_html => { :class => "form-control" } %>
   </div>
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.input :name, :input_html => { :class => "form-control" } %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.input :description, :input_html => { :class => "form-control" } %>
   </div>
   <div class="field">
-    <%= f.label :durability %><br>
-    <%= f.number_field :durability %>
+    <%= f.input :durability, :input_html => { :class => "form-control" } %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save", :class => "btn btn-primary" %>
   </div>
 <% end %>
