--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -4,3 +4,4 @@
 
 <%= link_to 'Show', @story %> |
 <%= link_to 'Back', stories_path %>
+<%= link_to 'Destroy', story_path(@story), method: :delete, data: { confirm: 'Are you sure?' } %>
