Created rules and their data entry fields.

--- a/app/views/scenes/show.html.erb
+++ b/app/views/scenes/show.html.erb
@@ -14,3 +14,5 @@
   <strong>Story:</strong>
   <%= @scene.story_id %>
 </p>
+
+<%= link_to 'New Rule', new_story_scene_rule_path(@story, @scene), :class => "btn btn-primary" %>
