--- a/app/views/layouts/storyboard.html.erb
+++ b/app/views/layouts/storyboard.html.erb
@@ -22,51 +22,56 @@
 
 <div class="row">
   <div class="col-md-3 background-grey">
-    <% if @stories.present? %>
-      <ul class="list-unstyled"> 
-        <% @stories.each do |story| %>
-          <li> 
-            <%= link_to story.title, story_path(story)%>
-            <ul class="<%= @story != story ? 'hidden-default' : '' %>">
-              <li>
-                <span class="pull-right">
-                  <%= link_to 'New Scene', new_story_scene_path(story) %>
-                </span>
-                <%= link_to "Scenes", story_scenes_path(story) %>
+    <ul class="list-unstyled">
+      <li>
+        <%= link_to "My Stories", stories_path %>
+        <% if @stories.present? %>
+          <ul class="list-unstyled list-stories"> 
+            <% @stories.each do |story| %>
+              <li> 
+                <%= link_to story.title, story_path(story)%>
+                <ul class="<%= @story != story ? 'hidden-default' : '' %>">
+                  <li>
+                    <span class="pull-right">
+                      <%= link_to 'New Scene', new_story_scene_path(story) %>
+                    </span>
+                    <%= link_to "Scenes", story_scenes_path(story) %>
 
-                <ul>
-                  <% story.scenes.each do |scene| %>
-                    <li>
-                      <%= link_to scene.title, story_scene_path(story, scene) %>
-                    </li>
-                  <% end %>
+                    <ul class="list-scenes">
+                      <% story.scenes.each do |scene| %>
+                        <li>
+                          <%= link_to scene.title, story_scene_path(story, scene) %>
+                        </li>
+                      <% end %>
+                    </ul>
+                  </li>
+
+                  <li>
+                    <span class="pull-right">
+                      <%= link_to 'New Asset', new_story_asset_path(story) %>
+                    </span>
+                    <%= link_to "Assets", story_assets_path(story) %>
+                    <ul>
+                      <% story.assets.each do |asset| %>
+                        <li>
+                          <%= link_to asset.name, story_asset_path(story, asset) %>
+                        </li>
+                      <% end %>
+                    </ul>
+                  </li>
                 </ul>
               </li>
-
-              <li>
-                <span class="pull-right">
-                  <%= link_to 'New Asset', new_story_asset_path(story) %>
-                </span>
-                <%= link_to "Assets", story_assets_path(story) %>
-                <ul>
-                  <% story.assets.each do |asset| %>
-                    <li>
-                      <%= link_to asset.name, story_asset_path(story, asset) %>
-                    </li>
-                  <% end %>
-                </ul>
-              </li>
-            </ul>
-          </li>
+            <% end %>
+            <li>
+              <hr>
+            </li>
+          </ul>
         <% end %>
-        <li>
-          <hr>
-        </li>
-        <li>
-          <%= link_to "New Story", new_story_path %>
-        </li>
-      </ul>
-    <% end %>
+      </li>
+      <li>
+        <%= link_to "New Story", new_story_path, :class => "btn btn-primary" %>
+      </li>
+    </ul>
   </div>
 
   <div class="col-md-9">
