--- a/app/views/rules/show.html.erb
+++ b/app/views/rules/show.html.erb
@@ -25,5 +25,5 @@
   <%= @rule.inequality_value %>
 </p>
 
-<%= link_to 'Edit', edit_rule_path(@rule) %> |
-<%= link_to 'Back', rules_path %>
+<%= link_to 'Edit', edit_story_scene_rule_path(@story, @scene, @rule) %> |
+<%= link_to 'Back', story_scene_rules_path %>
