--- a/app/views/rules/edit.html.erb
+++ b/app/views/rules/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @rule %> |
-<%= link_to 'Back', rules_path %>
+<%= link_to 'Show', story_scene_rule_path(@story, @scene, @rule) %> |
+<%= link_to 'Back', story_scene_rules_path(@story, @scene) %>
